--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "types": "./a/index.d.ts",
+      "import": "./a/index.es.js",
+      "require": "./a/index.umd.js"
     }
   },
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "main": "a/index.umd.js",
+  "module": "a/index.es.js",
+  "types": "a/index.d.ts",
   "files": [
-    "dist"
+    "a"
   ],
   "scripts": {
     "dev:playground": "vite --mode development:playground",
